--- a/mental/record/templates/record/add_record.html
+++ b/mental/record/templates/record/add_record.html
@@ -29,8 +29,8 @@
                                     <div class="form-row">
                                         <div class="col-md-10 offset-md-1">
                                             <div class="form-group">
-                                                <label class="small mb-1">Event Date</label>
-                                                {{ form.event_date }}
+                                                <label class="small mb-1">Record Date</label>
+                                                {{ form.record_date }}
                                                 <span>
                                                 </span>
                                             </div>
