--- a/mental/users/templates/base.html
+++ b/mental/users/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Day Bootstrap Template - Index</title>
+    <title>Mood Analysis</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -39,10 +39,6 @@
 <!-- ======= Top Bar ======= -->
 <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
-        <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-            <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
-        </div>
         <div class="social-links d-none d-md-block">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -56,18 +52,22 @@
 <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-        <h1 class="logo"><a href="/">Day</a></h1>
+        <h1 class="logo"><a href="/">Mood Analysis</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
         <nav id="navbar" class="navbar">
 
-            <li><a href="{% url 'news_board' %}">News</a></li>
             <ul>
                 {% if user.is_authenticated %}
                     <ul>
                         <li><a href="{% url 'logout' %}">Logout</a></li>
                         <li><a href="{% url 'password_change' %}">Change Password</a></li>
+                        <li><a href="{% url 'users-profile' %}">Profile</a></li>
+                        <li><a href="{% url 'leaderboard' %}">Leaderboard</a></li>
+                        <li><a href="{% url 'record_list' %}">Record</a></li>
+                        <li><a href="{% url 'post_list' %}">Posts</a></li>
+                        <li><a href="{% url 'add_post' %}">Add Post</a></li>
                     </ul>
                 {% else %}
                     <li><a href="{% url 'users-register' %}">Register</a></li>
