--- a/mental/users/templates/index.html
+++ b/mental/users/templates/index.html
@@ -5,18 +5,19 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-            <h1>Welcome to Day</h1>
-            <h2>We are team of talented designers making websites with Bootstrap</h2>
+            <h1>Welcome to Mood Analysis</h1>
+            <h2>Oneline engaged social media to help you analysis your mood</h2>
             {% if user.is_authenticated %}
                 <a href="{% url 'users-profile' %}" class="btn-get-started scrollto">Profile</a>
                 <a href="{% url 'leaderboard' %}" class="btn-get-started scrollto">LeaderBoard</a>
-            {% else %}
-
                 <a href="{% url 'add_post' %}" class="btn-get-started scrollto">Add Post</a>
                 <a href="{% url 'post_list' %}" class="btn-get-started scrollto">Posts</a>
                 <a href="{% url 'record_add' %}" class="btn-get-started scrollto">Add Record</a>
                 <a href="{% url 'record_list' %}" class="btn-get-started scrollto">Record</a>
                 <a href="{% url 'users-profile' %}" class="btn-get-started scrollto">Profile</a>
+            {% else %}
+
+
                 <a href="{% url 'login' %}" class="btn-get-started scrollto">Login</a>
                 <a href="{% url 'users-register' %}" class="btn-get-started scrollto">Register</a>
             {% endif %}
@@ -31,33 +32,38 @@
 
                 <div class="row">
                     <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-                        <img src="{% static 'img/about.jpg' %}" class="img-fluid" alt="">
+                        <img src="{% static 'img/sadgirl.jpeg' %}" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-                        <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                        <h3>Mental Health matters a lot in our daily life</h3>
                         <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore
-                            magna aliqua.
+                            The total global mental health
+                            apps market was valued at $5.2
+                            billion in 2022 and is expected
+                            to expand to $17 billion by
+                            2030.
                         </p>
                         <ul>
-                            <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat.
+                            <li><i class="bi bi-check-circle"></i>
+                                Mental health refers to the overall well-being of an individual's emotional,
+                                psychological, and social state. Good mental health is essential for a happy, healthy,
+                                and productive life.
                             </li>
-                            <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate
-                                velit.
+                            <li><i class="bi bi-check-circle"></i>
+                                Mental health problems can affect anyone, regardless of age, gender, race, or
+                                socio-economic status.
                             </li>
-                            <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda
-                                mastiro dolore eu fugiat nulla pariatur.
+                            <li><i class="bi bi-check-circle"></i>
+                                Mental health problems can include depression, anxiety, bipolar disorder, schizophrenia,
+                                eating disorders, substance abuse, and others.
                             </li>
                         </ul>
                         <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in voluptate
-                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum
+                            It is important to prioritize mental health and seek help if needed. This can involve
+                            talking to a trusted friend or family member, seeking professional therapy or counseling,
+                            practicing self-care activities such as meditation or exercise, and taking steps to reduce
+                            stress and improve overall well-being. Remember, mental health matters and taking care of
+                            yourself is essential to living a fulfilling and happy life.
                         </p>
                     </div>
                 </div>
@@ -74,27 +80,26 @@
                     <div class="col-lg-4" data-aos="fade-up">
                         <div class="box">
                             <span>01</span>
-                            <h4>Lorem Ipsum</h4>
-                            <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero
-                                placeat</p>
+                            <h4>Depression</h4>
+                            <p>A mental health disorder characterized by persistent feelings of sadness, hopelessness,
+                                and a loss of interest in daily activities.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
                         <div class="box">
                             <span>02</span>
-                            <h4>Repellat Nihil</h4>
-                            <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire
-                                leno para dest</p>
+                            <h4>Anxiety Disorders</h4>
+                            <p>A group of mental health disorders characterized by excessive worrying, nervousness, and
+                                fear that can interfere with daily activities.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
                         <div class="box">
                             <span>03</span>
-                            <h4> Ad ad velit qui</h4>
-                            <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam
-                                quis</p>
+                            <h4>Bipolar Disorder</h4>
+                            <p>A mental health disorder characterized by episodes of both depression and mania (elevated or irritable mood, increased energy, decreased need for sleep, and impulsive behavior).</p>
                         </div>
                     </div>
 
@@ -110,15 +115,15 @@
                 <div class="section-title">
                     <span>Services</span>
                     <h2>Services</h2>
-                    <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+                    <p>Online engaged social media to help you record your mental issues and share mental posts.</p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4><a href="">Lorem Ipsum</a></h4>
-                            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            <h4><a href="{% url 'leaderboard' %}">Leaderboard</a></h4>
+                            <p>Explore all the users currently in the platform to find more</p>
                         </div>
                     </div>
 
@@ -126,8 +131,8 @@
                          data-aos-delay="150">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4><a href="">Sed ut perspiciatis</a></h4>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                            <h4><a href="#">User Peofile</a></h4>
+                            <p>An user space to help you to discover more about your self</p>
                         </div>
                     </div>
 
@@ -135,8 +140,8 @@
                          data-aos-delay="300">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <h4><a href="">Magni Dolores</a></h4>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                            <h4><a href="{% url 'add_post' %}">Add post</a></h4>
+                            <p>Share your stories about mental health to help other people</p>
                         </div>
                     </div>
 
@@ -144,8 +149,8 @@
                          data-aos-delay="450">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-world"></i></div>
-                            <h4><a href="">Nemo Enim</a></h4>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                            <h4><a href="{% url 'post_list' %}">Post</a></h4>
+                            <p>See other people's posts of stories about mental health</p>
                         </div>
                     </div>
 
@@ -153,8 +158,8 @@
                          data-aos-delay="600">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-slideshow"></i></div>
-                            <h4><a href="">Dele cardo</a></h4>
-                            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                            <h4><a href="{% url 'record_add' %}">Add Record</a></h4>
+                            <p>Record your daily mood, analysis your mood and sharing</p>
                         </div>
                     </div>
 
@@ -162,8 +167,8 @@
                          data-aos-delay="750">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-arch"></i></div>
-                            <h4><a href="">Divera don</a></h4>
-                            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                            <h4><a href="">Record</a></h4>
+                            <p>Record world, engaging, sharing, analysing, boosting</p>
                         </div>
                     </div>
 
@@ -188,7 +193,7 @@
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
                             <h3>Our Address</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <p>Exeter, Devon, UK</p>
                         </div>
                     </div>
 
@@ -196,7 +201,7 @@
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
                             <h3>Email Us</h3>
-                            <p>contact@example.com</p>
+                            <p>kechenkristin@gmail.com</p>
                         </div>
                     </div>
 
@@ -204,7 +209,7 @@
                         <div class="info-box  mb-4">
                             <i class="bx bx-phone-call"></i>
                             <h3>Call Us</h3>
-                            <p>+1 5589 55488 55</p>
+                            <p>+44 7553762975</p>
                         </div>
                     </div>
 
