--- a/mental/record/templates/record/mood.html
+++ b/mental/record/templates/record/mood.html
@@ -4,13 +4,13 @@
     <div class="jumbotron vertical-center">
         <div class="container">
             <div class="row">
-                {% for key, value in emotions.items %}
-                    <div class="card rounded shadow-lg m-2">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ key }}</h5>
-                        </div>
+                <div class="card rounded shadow-lg m-2">
+                    <div class="card-body">
+                        {% for i in emotions %}
+                            <h5 class="card-title">{{ i }}</h5>
+                        {% endfor %}
                     </div>
-                {% endfor %}
+                </div>
             </div>
         </div>
     </div>
