add encouragement feature

--- a/mental/users/templates/base.html
+++ b/mental/users/templates/base.html
@@ -68,6 +68,7 @@
                         <li><a href="{% url 'record_list' %}">Record</a></li>
                         <li><a href="{% url 'post_list' %}">Posts</a></li>
                         <li><a href="{% url 'add_post' %}">Add Post</a></li>
+                        <li><a href="{% url 'news_board' %}">Encouragement</a></li>
                     </ul>
                 {% else %}
                     <li><a href="{% url 'users-register' %}">Register</a></li>
