--- a/mental/users/templates/index.html
+++ b/mental/users/templates/index.html
@@ -14,7 +14,7 @@
                 <a href="{% url 'post_list' %}" class="btn-get-started scrollto">Posts</a>
                 <a href="{% url 'record_add' %}" class="btn-get-started scrollto">Add Record</a>
                 <a href="{% url 'record_list' %}" class="btn-get-started scrollto">Record</a>
-                <a href="{% url 'users-profile' %}" class="btn-get-started scrollto">Profile</a>
+                <a href="{% url 'news_board' %}" class="btn-get-started scrollto">Encouragement</a>
             {% else %}
 
 
