--- a/mental/users/templates/users/profile.html
+++ b/mental/users/templates/users/profile.html
@@ -57,10 +57,10 @@
                             <hr>
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <p class="mb-0">Points</p>
+                                    <p class="mb-0">Mood</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0"> {{ obj.points }} </p>
+                                    <p class="text-muted mb-0"> {{ obj.mood }} </p>
                                 </div>
                             </div>
                         </div>
