--- a/mental/users/templates/users/profile_edit.html
+++ b/mental/users/templates/users/profile_edit.html
@@ -36,6 +36,7 @@
                                 {{ profile_form.avatar }}
                             </div>
                             <label class="small mb-1">Bio:</label> {{ profile_form.bio }}
+                            <label class="small mb-1">Mood:</label> {{ profile_form.mood }}
                         </div>
                     </div>
                     <br><br>
