--- a/mental/news/templates/news/news_board.html
+++ b/mental/news/templates/news/news_board.html
@@ -5,13 +5,10 @@
     <div class="jumbotron vertical-center">
         <div class="container">
             <div class="row">
-                {% for key, value in emotions.items %}
+                {% for i in text %}
                     <div class="card rounded shadow-lg m-2">
                         <div class="card-body">
-                            {% if value %}
-                                <h5 class="card-title">{{ key }}</h5>
-                            {% else %}
-                            {% endif %}
+                            <h5 class="card-title">{{ i }}</h5>
                         </div>
                     </div>
                 {% endfor %}
