--- a/mental/users/templates/users/leaderboard.html
+++ b/mental/users/templates/users/leaderboard.html
@@ -12,7 +12,7 @@
                             <th>Id</th>
                             <th>Img</th>
                             <th>UserName</th>
-                            <th>Points</th>
+                            <th>Mood</th>
                             <th>Operate Profile</th>
                         </tr>
                         </thead>
@@ -26,7 +26,7 @@
                                         alt="avatar"
                                         class="rounded-circle img-fluid" style="width: 150px;"></th>
                                 <th>{{ obj.user.username }}</th>
-                                <th>{{ obj.points }}</th>
+                                <th>{{ obj.mood }}</th>
                                 <th>
                                     <a class="btn btn-primary" href="/users/{{ obj.id }}/profile">See Profile</a>
                                     {% if cuid == obj.id %}
