--- a/mental/users/templates/index.html
+++ b/mental/users/templates/index.html
@@ -5,7 +5,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-            <h1>Welcome to Mood Analysis</h1>
+            <h1>Welcome to MoodSnap</h1>
             <h2>Oneline engaged social media to help you analysis your mood</h2>
             {% if user.is_authenticated %}
                 <a href="{% url 'users-profile' %}" class="btn-get-started scrollto">Profile</a>
